# deterministic-context-engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  agent.py  aider_integration.py  demo_recording.py  demo_session.py  engine.py  mcp_server.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
benchmarks/: acc_50turn.py  acc_adversarial.py  acc_boilerplate.py  acc_dense.py  aider_comparison.py  aider_forced_budget.py  aider_real_session.py  benchmark_50turn.py  bm25_structural_regression.py  gemini_50turn.py  gemini_bm25_50turn.py  gemini_bm25_adversarial.py  gemini_bm25_boilerplate.py  gemini_bm25_dense.py  gemini_bm25_structural_adversarial.py  gemini_comparison.py  gemini_fixed_50turn.py  gemini_fixed_adversarial.py  gemini_fixed_boilerplate.py  gemini_hybrid_v2_adversarial.py  gemini_hybrid_v2_boilerplate.py  gemini_memfly_50turn.py  gemini_memfly_adversarial.py  gemini_memfly_boilerplate.py  gemini_memfly_dense.py  gemini_niah_adversarial.py  gemini_niah_boilerplate.py  gemini_niah_dense.py  gemini_paper_ensemble_50turn.py  gemini_paper_ensemble_adversarial.py  gemini_paper_ensemble_boilerplate.py  gemini_paper_ensemble_dense.py  gemini_utils.py  lcm_comparison.py  niah_adversarial.py  niah_adversarial_gemini.py  niah_adversarial_structural.py  niah_boilerplate.py  niah_dense.py  niah_entity.py  (+11 more)
deterministic_context_engine/: __init__.py  __main__.py  mcp_server.py
docs/: blog.md  paper_algorithms.md
results/: agentbench_context_20260312_114320.json  aider_comparison_20260309.json  aider_forced_budget_20260310.json  aider_forced_budget_20260310.txt  bm25_structural_regression.json  demo_report_20260308.txt  demo_report_live_20260308.txt  demo_session_20260308.txt  demo_session_live_20260308.txt  gemini_50turn_20260309.json  gemini_adversarial_20260309.json  gemini_bm25_50turn_20260309.json  gemini_bm25_adversarial_20260309.json  gemini_bm25_boilerplate_20260309.json  gemini_bm25_dense_20260309.json  gemini_bm25_structural_adversarial_20260310.json  gemini_boilerplate_20260309.json  gemini_dense_niah_v2_20260309.json  gemini_fixed_50turn_20260309.json  gemini_fixed_adversarial_20260309.json  gemini_fixed_boilerplate_20260309.json  niah_20260307.json  niah_adversarial_20260307.json  (+32 more)
(+66 files in other folders)
