[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deterministic-context-engine"
version = "0.1.0"
description = "Priority-aware context management for LLMs with compaction and MCP server"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "cerebras-cloud-sdk>=1.0",
    "matplotlib>=3.7",
    "sentence-transformers>=2.2",
]

[project.scripts]
dce = "deterministic_context_engine.__main__:main"

[tool.setuptools]
py-modules = ["engine", "agent", "demo_session", "demo_recording"]

[tool.setuptools.packages.find]
include = ["deterministic_context_engine*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:anyio"]
