[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-context-engine"
version = "0.5.0"
description = "Deterministic context management for LLMs -- append-only logging, scoring-based compaction, and session wrappers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
tfidf = ["scikit-learn>=1.3"]
semantic = ["sentence-transformers>=2.2"]
cerebras = ["cerebras-cloud-sdk>=1.0"]
gemini = ["google-genai>=1.0"]
all = [
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "cerebras-cloud-sdk>=1.0",
    "google-genai>=1.0",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.3",
    "rank-bm25>=0.2",
    "fastmcp",
]

[tool.setuptools.packages.find]
include = ["deterministic_context_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "-p", "no:anyio"]

[tool.coverage.run]
source = ["deterministic_context_engine", "engine.py"]
omit = ["tests/*", "benchmarks/*", "aider_*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
    "from sklearn",
    "from sentence_transformers",
]
